--- a/src/help/components/entry/styles/entry.module.scss
+++ b/src/help/components/entry/styles/entry.module.scss
@@ -3,9 +3,13 @@
 
 .in-panel {
   padding-block-start: $global-padding;
+
+  & [id] {
+    scroll-margin-top: 2lh;
+  }
 }
 
-.content *[id] {
+.content [id] {
   scroll-margin-top: calc(var(--top-header-margin) + #{$global-margin * 0.5});
 }
 
