--- a/src/proteomes/components/landing-page/styles/landing-page.module.scss
+++ b/src/proteomes/components/landing-page/styles/landing-page.module.scss
@@ -28,7 +28,7 @@
   justify-content: flex-start;
   flex-direction: column;
 
-  p.stats-count {
+  p {
     display: flex;
     gap: $global-margin;
   }
