--- a/src/uniprotkb/components/statistics/styles/historical-release-entries-line-plot.module.scss
+++ b/src/uniprotkb/components/statistics/styles/historical-release-entries-line-plot.module.scss
@@ -2,8 +2,8 @@
 
 .line-plot {
   path.line {
-    fill: $colour-weldon-blue;
+    fill: none;
     stroke: $colour-weldon-blue;
-    stroke-width: 1.5;
+    stroke-width: 4;
   }
 }
