--- a/src/uniref/components/landing-page/styles/landing-page.module.scss
+++ b/src/uniref/components/landing-page/styles/landing-page.module.scss
@@ -3,6 +3,11 @@
 .landing-page {
   margin-block: 2 * $global-margin;
 
+  .image-container {
+    display: grid;
+    place-items: center;
+  }
+
   p:last-of-type {
     margin-bottom: 0;
   }
@@ -11,19 +16,12 @@
     margin-bottom: $global-margin;
     border-spacing: 0;
     overflow: auto;
-
-    caption {
-      inline-size: max-content;
-    }
+    width: 100%;
   }
 
   thead {
     color: var(--fr--color-sky-white);
     background: var(--fr--color-sea-blue);
-
-    th {
-      width: 30%;
-    }
 
     a {
       color: var(--fr--color-sky-white);
@@ -40,32 +38,9 @@
     border: 1px solid var(--fr--color-sea-blue);
     border-collapse: collapse;
   }
-}
 
-.statistics {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-}
-
-.entries-count {
-  display: flex;
-  justify-content: flex-start;
-  flex-direction: column;
-
-  p {
-    display: flex;
-    gap: $global-margin;
-  }
-}
-
-.download {
-  display: flex;
-  justify-content: flex-start;
-  flex-direction: column;
-
-  a {
-    margin-inline-end: 0.5 * $global-margin;
+  .documentation {
+    margin-left: 2 * $global-margin;
   }
 }
 
