Use native select for go-cam model selection; style tweaks.

--- a/src/uniprotkb/components/entry/styles/go-cam.module.scss
+++ b/src/uniprotkb/components/entry/styles/go-cam.module.scss
@@ -1,7 +1,12 @@
 @import 'franklin-sites/src/styles/colours';
 
 .go-cam-container {
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
+
+  select.id-select {
+    width: fit-content;
+    display: block;
+  }
 
   .ids-list {
     max-height: 15rem;
