--- a/src/uniprotkb/components/entry/styles/interaction-section.module.scss
+++ b/src/uniprotkb/components/entry/styles/interaction-section.module.scss
@@ -20,6 +20,8 @@
   margin-bottom: 1rem;
 }
 
-.viewer-ids-container .ids-list {
-  max-height: 15rem;
+select.id-select {
+  width: fit-content;
+  display: block;
+  margin-bottom: 0.5rem;
 }
