--- a/src/uniprotkb/components/protein-data-views/styles/nightingale-zoom-tool.module.scss
+++ b/src/uniprotkb/components/protein-data-views/styles/nightingale-zoom-tool.module.scss
@@ -10,6 +10,6 @@
     background: none;
     padding-left: 0.75rem;
     font-size: 0.9rem;
-    color: #{$colour-sea-blue};
+    color: var(--fr--color-sea-blue);
   }
 }
