--- a/src/basket/styles/basket-status.module.scss
+++ b/src/basket/styles/basket-status.module.scss
@@ -1,5 +1,3 @@
-@import 'franklin-sites/src/styles/colours';
-
 :global(.sliding-panel) {
   .basket-status {
     display: none;
@@ -12,7 +10,7 @@
   &:hover,
   &:focus {
     svg {
-      background-color: $colour-sea-blue;
+      background-color: var(--fr--color-sea-blue);
     }
   }
 
@@ -23,7 +21,7 @@
     margin: 0 0.5ch;
     padding: 0.4ch;
     border-radius: 50%;
-    background-color: $colour-sapphire-blue;
+    background-color: var(--fr--color-sapphire-blue);
     color: white;
     animation: appear 1 0.5s both ease-out;
 
