--- a/src/help/components/entry/styles/entry.module.scss
+++ b/src/help/components/entry/styles/entry.module.scss
@@ -1,4 +1,3 @@
-@import 'franklin-sites/src/styles/colours';
 @import 'franklin-sites/src/styles/settings';
 
 .in-panel {
@@ -22,27 +21,27 @@
   }
 
   thead {
-    color: $colour-sky-white;
-    background: $colour-sea-blue;
+    color: var(--fr--color-sky-white);
+    background: var(--fr--color-sea-blue);
 
     a {
-      color: $colour-sky-white;
+      color: var(--fr--color-sky-white);
     }
   }
 
   tbody {
-    border: 1px solid $colour-sea-blue;
+    border: 1px solid var(--fr--color-sea-blue);
   }
 
   th,
   td {
     padding: $global-padding * 0.25 $global-padding * 0.5;
-    border: 1px solid $colour-sea-blue;
+    border: 1px solidvar(--fr--color-sea-blue);
     border-collapse: collapse;
   }
 
   code {
-    background: $colour-platinum;
+    background: var(--fr--color-platinum);
   }
 
   p,
@@ -53,7 +52,7 @@
   /* copied from Franklin's CodeBlock component styles */
   pre {
     display: block; /* except this which is different */
-    background: $colour-yankees-blue;
+    background: var(--fr--color-yankees-blue);
     color: $white;
     font-family: $code-font-family;
     font-weight: $code-font-weight;
@@ -69,12 +68,12 @@
   }
 
   img {
-    border: 0.5em solid $colour-gainsborough;
+    border: 0.5em solid var(--fr--color-gainsborough);
     border-bottom-width: 1em;
   }
 
   figure {
-    border: 0.5em solid $colour-gainsborough;
+    border: 0.5em solid var(--fr--color-gainsborough);
     margin-block: 1em;
 
     & img {
@@ -83,7 +82,7 @@
     }
 
     & figcaption {
-      background: $colour-gainsborough;
+      background: var(--fr--color-gainsborough);
       text-align: center;
       font-style: italic;
     }
