--- a/src/shared/components/views/styles/visual-features-view.module.scss
+++ b/src/shared/components/views/styles/visual-features-view.module.scss
@@ -1,7 +1,5 @@
-@import 'franklin-sites/src/styles/colours';
-
 .full-view {
   float: right;
   margin-right: 0.5rem;
-  color: #{$colour-sea-blue};
+  color: #{var(--fr--color-sea-blue)};
 }
