--- a/src/uniprotkb/components/protein-data-views/styles/sub-cell-viz.scss
+++ b/src/uniprotkb/components/protein-data-views/styles/sub-cell-viz.scss
@@ -1,5 +1,3 @@
-@import 'franklin-sites/src/styles/colours';
-
 .sub-cell-viz__in-view-pin {
   display: none;
 }
@@ -14,7 +12,7 @@
 
   &.lookedAt,
   &:hover {
-    background-color: $colour-sea-blue;
+    background-color: var(--fr--color-sea-blue);
     color: white;
 
     & article {
