--- a/src/uniprotkb/components/statistics/styles/statistics-page.module.scss
+++ b/src/uniprotkb/components/statistics/styles/statistics-page.module.scss
@@ -1,4 +1,3 @@
-@import 'franklin-sites/src/styles/colours';
 @import 'franklin-sites/src/styles/settings';
 
 .statistics-page {
@@ -20,22 +19,22 @@
   }
 
   thead {
-    color: $colour-sky-white;
-    background: $colour-sea-blue;
+    color: var(--fr--color-sky-white);
+    background: var(--fr--color-sea-blue);
 
     a {
-      color: $colour-sky-white;
+      color: var(--fr--color-sky-white);
     }
   }
 
   tbody {
-    border: 1px solid $colour-sea-blue;
+    border: 1px solid var(--fr--color-sea-blue);
   }
 
   th,
   td {
     padding: $global-padding * 0.25 $global-padding * 0.5;
-    border: 1px solid $colour-sea-blue;
+    border: 1px solid var(--fr--color-sea-blue);
     border-collapse: collapse;
 
     &.indent {
