Add preamble to GO tabs.

--- a/src/uniprotkb/components/entry/styles/go-cam.module.scss
+++ b/src/uniprotkb/components/entry/styles/go-cam.module.scss
@@ -3,6 +3,10 @@
 .go-cam-container {
   margin-bottom: 1.5rem;
 
+  .preamble {
+    margin-bottom: 1rem;
+  }
+
   select.id-select {
     width: fit-content;
     display: block;
