Make border-collapse: collapse so border highlight works.

--- a/src/shared/components/table/styles/table.module.scss
+++ b/src/shared/components/table/styles/table.module.scss
@@ -21,7 +21,7 @@
   margin: 1em 0;
   border-spacing: 0;
   border-block-end: 1px solid #c2c4c4;
-  border-collapse: separate;
+  border-collapse: collapse;
 
   & thead {
     position: sticky;
