--- a/src/uniref/components/landing-page/styles/landing-page.module.scss
+++ b/src/uniref/components/landing-page/styles/landing-page.module.scss
@@ -38,9 +38,44 @@
     border: 1px solid var(--fr--color-sea-blue);
     border-collapse: collapse;
   }
+  .animation {
+    border: 1px solid var(--fr--color-uniref);
 
-  .documentation {
-    margin-left: 2 * $global-margin;
+    :global(.cluster_animation_illustration_svg__identity-100),
+    :global(.cluster_animation_illustration_svg__identity-90),
+    :global(.cluster_animation_illustration_svg__identity-50) {
+      animation-name: cluster-animation;
+      animation-duration: 6s;
+      animation-direction: alternate;
+      animation-iteration-count: infinite;
+      animation-timing-function: cubic-bezier(0.61, -0.08, 0, 1.63);
+    }
+
+    :global(.cluster_animation_illustration_svg__identity-100) {
+      opacity: 1;
+    }
+
+    :global(.cluster_animation_illustration_svg__identity-90) {
+      opacity: 0;
+      animation-delay: -2s;
+    }
+
+    :global(.cluster_animation_illustration_svg__identity-50) {
+      opacity: 0;
+      animation-delay: -4s;
+    }
+  }
+
+  /**/
+}
+
+@keyframes cluster-animation {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
   }
 }
 
