Update CSS custom variables, export SASS variables.

--- a/src/shared/components/table/styles/table.module.scss
+++ b/src/shared/components/table/styles/table.module.scss
@@ -1,3 +1,11 @@
+$table__header-text: #393b42;
+$table__header-background: #fff;
+$table__even: #fff;
+$table__odd: #e4e8eb;
+$table__header-text: #393b42;
+$table_border: #c2c4c4;
+$table_extra-content-background: #f1f1f1;
+
 .container {
   width: calc(100% + 2em);
   padding-inline: 1em;
@@ -9,13 +17,16 @@
   padding: 0;
   margin: 1em 0;
   border-spacing: 0;
-  border-block-end: 1px solid #c2c4c4;
+  border-block-end: 1px solid $table_border;
 
   & th {
     text-align: left;
     vertical-align: middle;
-    background-color: var(--protvista-datable__header-background, #fff);
-    color: var(--protvista-datable__header-text, #393b42);
+    background-color: var(
+      --table__header-background,
+      $table__header-background
+    );
+    color: var(--table__header-text, $table__header-text);
     text-overflow: ellipsis;
     text-transform: uppercase;
   }
@@ -23,7 +34,7 @@
   & td,
   & th {
     padding: 0.2rem 1ch;
-    border-block-start: 1px solid #c2c4c4;
+    border-block-start: 1px solid $table_border;
   }
 
   & thead :global(.dropdown) > button {
@@ -36,10 +47,10 @@
 }
 
 .row {
-  background-color: var(--protvista-datatable__even, #fff);
+  background-color: var(--table__even, #table__even);
 
   &.odd {
-    background-color: var(--protvista-datatable__odd, #e4e8eb);
+    background-color: var(--table__odd, $table__odd);
   }
 
   &:hover {
@@ -47,7 +58,7 @@
     /* => keep groups of rows highlighted in sync */
     &,
     & + .extra-content {
-      background-color: var(--protvista-datatable__hover, #f1f1f1);
+      background-color: var(--table__hover, $table_extra-content-background);
     }
   }
 
@@ -69,7 +80,7 @@
   }
 
   &.extra-content td {
-    border-color: #c2c4c455;
+    border-color: $table_border;
   }
 }
 
@@ -78,5 +89,5 @@
 /* Select a row that has a next .extra-content sibling that is hovered */
 /* => keep groups of rows highlighted in sync */
 .row:has(+ .extra-content:hover) {
-  background-color: var(--protvista-datatable__hover, #f1f1f1);
+  background-color: var(--table__hover, $table_extra-content-background);
 }
