Clean up unused styles.

--- a/src/shared/components/table/styles/table.module.scss
+++ b/src/shared/components/table/styles/table.module.scss
@@ -47,7 +47,7 @@ $table_extra-content-background: #f1f1f1;
 }
 
 .row {
-  background-color: var(--table__even, #table__even);
+  background-color: var(--table__even, $table__even);
 
   &.odd {
     background-color: var(--table__odd, $table__odd);
