Set CSS custom variable in :root at app level.

--- a/src/uniprotkb/components/entry/styles/community-curation.module.scss
+++ b/src/uniprotkb/components/entry/styles/community-curation.module.scss
@@ -43,7 +43,7 @@
       & th {
         text-align: left;
         vertical-align: middle;
-        color: $table__header-text;
+        color: var(--table__header-text);
         text-transform: uppercase;
       }
 
