--- a/src/app/components/styles/app.scss
+++ b/src/app/components/styles/app.scss
@@ -108,3 +108,12 @@ protvista-manager {
 //     }
 //   }
 // }
+
+:root {
+  --table__even: #fff;
+  --table__header-background: #fff;
+  --table__header-text: #393b42;
+  --table__odd: #e4e8eb;
+  --table_border: #c2c4c4;
+  --table_hover: #f1f1f1;
+}
