Add a separate section and remove the tabs

--- a/src/uniprotkb/components/entry/styles/interaction-section.module.scss
+++ b/src/uniprotkb/components/entry/styles/interaction-section.module.scss
@@ -16,10 +16,10 @@
   }
 }
 
-.visualisation-tabs {
-  margin-bottom: 1rem;
-}
+.viewer-ids-container {
+  margin: 0.5rem 0 1rem 0;
 
-.viewer-ids-container .ids-list {
-  max-height: 15rem;
+  .ids-list {
+    max-height: 15rem;
+  }
 }
