add a bit of margin

--- a/src/uniprotkb/components/protein-data-views/styles/structure-view.module.css
+++ b/src/uniprotkb/components/protein-data-views/styles/structure-view.module.css
@@ -10,5 +10,6 @@
   .container:has(protvista-structure[structureid^='AF']) :global(.message) {
     /* Display and revert to the default style of the message */
     display: grid;
+    margin-block-start: 0.5em;
   }
 }
