Add separator in the tooltip and improve styles

--- a/src/shared/utils/styles/tooltip.module.scss
+++ b/src/shared/utils/styles/tooltip.module.scss
@@ -22,6 +22,14 @@
   a {
     text-decoration: underline;
   }
+
+  p {
+    margin-bottom: 1rem;
+  }
+
+  hr {
+    margin-bottom: 0.5rem;
+  }
 }
 
 .arrow {
