make AF out of sync message more obvious

--- a/src/app/components/styles/app.scss
+++ b/src/app/components/styles/app.scss
@@ -117,3 +117,12 @@ protvista-manager {
   --table_border: #c2c4c4;
   --table_hover: #f1f1f1;
 }
+
+/* Make sure to not animate views if user has prefers-reduced-motion on */
+@media (prefers-reduced-motion) {
+  ::view-transition-group(*),
+  ::view-transition-old(*),
+  ::view-transition-new(*) {
+    animation: none !important;
+  }
+}
