--- a/src/shared/components/results/styles/did-you-mean.module.scss
+++ b/src/shared/components/results/styles/did-you-mean.module.scss
@@ -1,9 +1,9 @@
 .did-you-mean-message {
   text-align: left;
-}
 
-.did-you-mean-message small {
-  font-size: 100%;
+  p:last-of-type {
+    margin-block-end: 0;
+  }
 }
 
 .suggestions {
