Add missing hook dep.

--- a/src/uniprotkb/components/protein-data-views/styles/go-cam-viz.module.scss
+++ b/src/uniprotkb/components/protein-data-views/styles/go-cam-viz.module.scss
@@ -44,9 +44,9 @@
       margin-bottom: 0.333rem;
     }
 
-    --activity-background-active: var(--fr--color-sea-blue);
-    --activity-color-active: var(--fr--color-sky-white);
-    --activity-padding: 0.75rem 0.5rem;
+    --activity-background-active: var(--fr--color-platinum);
+    // --activity-color-active: var(--fr--color-sky-white);
+    // --activity-padding: 0.75rem 0.5rem;
     --graph-height: 33vh;
     --button-background: var(--fr--color-sea-blue);
     --button-background-hover: color-mix(
