--- a/src/uniprotkb/components/protein-data-views/styles/go-cam-viz.module.scss
+++ b/src/uniprotkb/components/protein-data-views/styles/go-cam-viz.module.scss
@@ -38,7 +38,6 @@
       border-left: 0.125rem solid var(--fr--color-sapphire-blue);
       padding-left: 0.25rem;
       padding-right: 0;
-      margin-left: -0.5rem;
       font-weight: bolder;
     }
 
@@ -46,10 +45,15 @@
       margin-bottom: 0.333rem;
     }
 
+    &::part(activity) {
+      margin-bottom: 1rem;
+    }
+
     --activity-background-active: var(--fr--color-platinum);
     --activity-color-active: var(--fr--color-sapphire-blue);
     --activity-color: var(--fr--color-sapphire-blue);
-    --activity-padding: 0 0.25rem;
+    --activity-padding: 0 0.25rem 0.25rem 0.25rem;
+    --activity-border-width: 0;
     --graph-height: 33vh;
     --button-background: var(--fr--color-sea-blue);
     --button-background-hover: color-mix(
@@ -64,7 +68,7 @@
     --process-label-padding: 5px;
     --process-label-border-color: var(--fr--color-sapphire-blue);
     --process-label-background: var(--fr--color-sky-white);
-    --panel-header-padding: 0 0 0.25rem 0;
+    --panel-header-padding: 0;
     --process-padding: 1rem;
 
     --node-align-items: flex: start;
