--- a/src/shared/components/table/styles/table.module.scss
+++ b/src/shared/components/table/styles/table.module.scss
@@ -1,3 +1,5 @@
+@import 'franklin-sites/src/styles/settings';
+
 .expand-button-container {
   display: flex;
   justify-content: flex-end;
@@ -18,7 +20,7 @@
 .table {
   width: 100%;
   padding: 0;
-  margin: 1em 0;
+  margin: 0 0 2 * $global-margin 0;
   border-spacing: 0;
   border-block-end: 1px solid #c2c4c4;
   border-collapse: collapse;
