--- a/src/app/components/home-page/styles/non-critical.module.scss
+++ b/src/app/components/home-page/styles/non-critical.module.scss
@@ -109,7 +109,6 @@ $latest-news-height: 18rem;
       --main-chip-color: #{$colour-platinum};
       float: right;
       margin-inline-end: -0.75 * $global-padding;
-      margin-block-end: -0.25 * $global-padding;
     }
 
     .latest-news__abstract {
@@ -184,7 +183,11 @@ $latest-news-height: 18rem;
   }
 
   article {
-    overflow-y: hidden;
+    overflow-y: auto;
+    scrollbar-width: thin;
+    &::-webkit-scrollbar {
+      display: none;
+    }
 
     img {
       float: left;
