Set node color to black.

--- a/src/uniprotkb/components/protein-data-views/styles/go-cam-viz.module.scss
+++ b/src/uniprotkb/components/protein-data-views/styles/go-cam-viz.module.scss
@@ -82,5 +82,6 @@
     --node-border-color: var(--fr--color-gainsborough);
     --node-border-width: 1px 0 0 0;
     --node-padding: 0;
+    --node-color: black;
   }
 }
