refactor previous commit, do not make the submit button sticky on warning

--- a/src/tools/styles/ToolsForm.scss
+++ b/src/tools/styles/ToolsForm.scss
@@ -76,6 +76,13 @@
   }
 }
 
+.tools-form-warning-submit {
+  float: right;
+
+  & button.button[type='submit'] {
+    --main-color: var(--fr--color-warning);
+  }
+}
 .tools-form-advanced > summary {
   overflow: hidden;
   cursor: pointer;
