fix description in OpenGraph

--- a/index.ejs
+++ b/index.ejs
@@ -15,7 +15,7 @@
 
     <!-- Open Graph (OG) tags for Facebook, WhatsApp, LinkedIn, Slack, Discord, and more -->
     <meta property="og:title" content="UniProt" />
-    <meta property="og:description" content="UniProt is the world\u2019s leading high-quality, comprehensive and freely accessible resource of protein sequence and functional information." />
+    <meta property="og:description" content="UniProt is the world's leading high-quality, comprehensive and freely accessible resource of protein sequence and functional information." />
     <meta property="og:image" content="https://www.uniprot.org/og-uniprot-wide-logo-1200x630.png" />
     <meta property="og:url" content="https://www.uniprot.org/" />
     <meta property="og:type" content="website" />
@@ -30,7 +30,7 @@
     <meta property="twitter:domain" content="uniprot.org">
     <meta property="twitter:url" content="https://www.uniprot.org">
     <meta name="twitter:title" content="UniProt" />
-    <meta name="twitter:description" content="UniProt is the world\u2019s leading high-quality, comprehensive and freely accessible resource of protein sequence and functional information." />
+    <meta name="twitter:description" content="UniProt is the world's leading high-quality, comprehensive and freely accessible resource of protein sequence and functional information." />
     <meta name="twitter:image" content="https://www.uniprot.org/og-uniprot-wide-logo-1200x600.png" />
     <meta name="twitter:image:alt" content="UniProt logo" />
 
